1. fix popup bug 2. fix picker bug 3. update docs

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "基于快应用 的多功能、富交互、轻量级的UI 组件库",
   "subversion": {
-    "toolkit": "0.0.32"
+    "toolkit": "0.0.34"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   ],
   "scripts": {
     "server": "hap server",
+    "postinstall": "hap postinstall",
     "debug": "hap debug",
     "build": "hap build",
     "release": "hap release",
@@ -26,12 +27,13 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "hap-toolkit": "0.0.32",
+    "hap-toolkit": "0.0.34",
     "babel-cli": "^6.10.1",
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "cross-env": "^5.1.4",
     "css-what": "^2.1.0",
     "koa": "^2.3.0",
     "koa-send": "^4.1.1",
@@ -39,6 +41,6 @@
     "koa-body": "^2.5.0",
     "koa-router": "^7.2.1",
     "socket.io": "^2.1.0",
-    "webpack": "^1.13.0"
+    "webpack": "^3.11.0"
   }
 }
